src/examples/type_errors/ReadUnreadable.sol
pragma solidity ^0.5.0;

contract ReadUnreadable {
    final address business;

    constructor() {
        business = me;
    }

    function give_receipt() public {
        uint@business a = 1;
        uint@business b = 2;
        bool c = a == b;
    }
}
